Improve JavaDocs in Resources package